syntax = "proto3";
import "ConstDropTableItemEx.proto";
//生成文件所在包名
option java_package = "com.gejian.pixel.proto";
//生成的java文件名
option java_outer_classname = "ConstDropTableProtobuf";

message	ConstDropTable  {
	repeated	ConstDropTableItemEx	items = 1;
}