syntax = "proto3";
//生成文件所在包名
option java_package = "com.gejian.pixel.proto";
//生成的java文件名
option java_outer_classname = "ConstDropTableItemExProtobuf";

message	ConstDropTableItemEx  {
	optional	string	id = 1;
	optional	string	content = 2;
	optional	string	desc = 3;
	optional	string	desc2 = 4;
}